--- a/contactusss.css
+++ b/contactusss.css
@@ -2,11 +2,10 @@
   --brandcolor: #36b3a7;
 }
 
-/* #contact {
-  padding: 40px auto;
+#contact {
   margin: 0;
   overflow-x: hidden;
-} */
+}
 
 #contact .jumbotron {
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
